--- a/index.html
+++ b/index.html
@@ -238,8 +238,7 @@
             <div id="loginMessage" style="margin-top: 15px;"></div>
             
             <div style="margin-top: 20px; background: #e3f2fd; padding: 15px; border-radius: 8px;">
-                <h3>Login Credentials:</h3>
-                <p><strong>Admin:</strong> admin / admin123</p>
+                <h3>Login Credentials:
                 <p><strong>Students:</strong> best_students_class_8th / I am best</p>
             </div>
         </section>
